<resources>
    <string name="app_name">微信红包</string>
    <string name="app_version">v4.0</string>
    <string name="app_description">∠( ᐛ 」∠)_使用指南∠( ᐛ 」∠)_\n\n ○ 狠戳插件开关\n ○ 回到微信聊天\n ○ 坐等红包进账\n\n 遇到问题, 欢迎通过 GitHub Issue 反馈~\n https://github.com/geeeeeeeeek/WeChatLuckyMoney</string>
    <string name="preference">偏好设置</string>
    <string name="update_error">遇到一些问题,请前往GitHub手动更新喵(ฅ´ω`ฅ)</string>
    <string name="update_new_seg1">发现新版本(</string>
    <string name="update_new_seg2">),正在为您准备下载( /) V (\\ )</string>
    <string name="update_new_seg3">),请进入设置完成更新(ฅ´ω`ฅ)</string>
    <string name="update_already_latest">已经是最新版本了(❁´▽`❁)</string>
    <string name="service_off">关闭插件</string>
    <string name="service_on">开启插件</string>
    <string name="pref_watch_exclude_words_summary">不拆开包含这些文字的红包(空格间隔)</string>
    <string name="pref_comment_words_summary">随机选择下列感谢语(空格间隔)</string>
    <string name="url_github_issues">https://github.com/geeeeeeeeek/WeChatLuckyMoney/issues</string>
    <string name="home_banner_ad_unit_id">ca-app-pub-8428619221469478/4736153346</string>
    <string name="webview_banner_ad_unit_id">ca-app-pub-8428619221469478/4163694548</string>
    <string name="community">社区</string>
    <string name="settings">设置</string>
    <string name="uber_ad_title">首次乘车可获得 ￥12 优惠</string>
    <string name="uber_ad_text">立即获得免费乘车机会</string>
    <string name="github_1">在 GitHub 上</string>
    <string name="github_2">本项目，支持应用开源</string>
    <string name="star_2">Star</string>
    <string name="star_1">★</string>
    <string name="turn_on_toast">点击「微信红包」</string>
    <string name="turn_on_error_toast">遇到一些问题,请手动打开系统设置>无障碍服务>微信红包(ฅ´ω`ฅ)</string>
    <string name="webview_github_title">GitHub 项目主页</string>
    <string name="webview_uber_title">Uber 优惠乘车</string>
    <string name="download_backend">正在后台下载</string>
    <string name="download_redirect">正在前往下载页面</string>
    <string name="download_hint">点击\"普通下载\"获取 Uber</string>
    <string name="watch_options">监视选项</string>
    <string name="watch_notifications">监视系统通知</string>
    <string name="watch_notifications_hint">读取新消息通知中的红包提示并进入聊天页</string>
    <string name="watch_list">监视聊天列表</string>
    <string name="watch_list_hint">读取聊天列表中的红包提示并进入聊天页</string>
    <string name="anti_block_options">防封号选项</string>
    <string name="auto_open_packets">自动拆开红包</string>
    <string name="open_with_delay">延时拆开红包</string>
    <string name="open_self">拆开自己发的红包</string>
    <string name="skip_phrases">屏蔽红包文字</string>
    <string name="about">关于应用</string>
    <string name="check_new_version">检查新版本</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="help_hint">前往GitHub项目主页提交issue</string>
    <string name="labs">实验功能</string>
    <string name="snatch_on_lockscreen">息屏抢红包</string>
    <string name="snatch_on_lockscreen_hint">保持30分钟后台活跃,可能会极大增加电量消耗,请谨慎使用</string>
    <string name="auto_reply">拆开红包后自动回复</string>
    <string name="checking_new_version">正在检查新版本……</string>
    <string name="delay_instantly">立即</string>
    <string name="delay_delay">延迟</string>
    <string name="delay_open">拆开红包</string>
    <string name="delay_sec">秒</string>
    <string name="delay_then">然后</string>
    <string name="auto_open_private_packets">自动拆开私聊红包</string>
</resources>