<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  tools:context=".SettingsActivity"
                  android:icon="@null">
    <PreferenceCategory
            android:title="@string/watch_options"
            android:layout="@layout/preference_category">
        <CheckBoxPreference
                android:key="pref_watch_notification"
                android:title="@string/watch_notifications"
                android:summary="@string/watch_notifications_hint"
                android:defaultValue="true"
                android:layout="@layout/preference_checkbox"/>
        <CheckBoxPreference
                android:key="pref_watch_list"
                android:title="@string/watch_list"
                android:summary="@string/watch_list_hint"
                android:layout="@layout/preference_checkbox"
                android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/anti_block_options"
            android:layout="@layout/preference_category">
        <CheckBoxPreference
                android:key="pref_watch_chat"
                android:title="@string/auto_open_packets"
                android:layout="@layout/preference_checkbox"
                android:defaultValue="true"/>
        <xyz.monkeytong.hongbao.activities.SeekBarPreference
                android:key="pref_open_delay"
                android:title="@string/open_with_delay"
                pref_kind="pref_open_delay"
                android:layout="@layout/preference_checkbox"/>
        <CheckBoxPreference
                android:key="pref_watch_self"
                android:title="@string/open_self"
                android:layout="@layout/preference_checkbox"
                android:defaultValue="true"/>
        <EditTextPreference
                android:key="pref_watch_exclude_words"
                android:title="@string/skip_phrases"
                android:summary="@string/pref_watch_exclude_words_summary"
                android:layout="@layout/preference_checkbox"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/about"
            android:layout="@layout/preference_category">
        <Preference
                android:key="pref_etc_check_update"
                android:title="@string/check_new_version"
                android:summary="http://dwz.cn/WeChatLuckyMoney"
                android:layout="@layout/preference_checkbox"/>
        <Preference
                android:key="pref_etc_issue"
                android:title="@string/help_and_feedback"
                android:summary="@string/help_hint"
                android:layout="@layout/preference_checkbox"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/labs"
            android:layout="@layout/preference_category">
        <CheckBoxPreference
                android:key="pref_watch_on_lock"
                android:title="@string/snatch_on_lockscreen"
                android:summary="@string/snatch_on_lockscreen_hint"
                android:layout="@layout/preference_checkbox"
                android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>